<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blind Communicator Info</string>
	<string name="app_title">IMPORTANT</string>
    <string name="app_note">Since December 2018, Google doesn\'t consider Blind Communicator, a free App for the visually impaired, an exception to be on Play Store because of the permissions that the App requires to work properly (managing messages, calls and contacts). The App and the source code are now available in GitHub.</string>
    <string name="app_download">Download App file from GitHub</string>
    <string name="app_source">Download source code from GitHub</string>
    <string name="app_privacy">Privacy policy</string>
    <string name="app_ok">OK</string>

    <string name="app_download_link" formatted="false">https://lrusso.github.io/BlindCommunicator/BlindCommunicator.htm</string>
	<string name="app_source_link" formatted="false">https://github.com/lrusso/BlindCommunicator</string>

	<string name="app_privacy_text">Blind Communicator Privacy Policy\n\nReleased on Dec 21, 2016\n\nI, Leonardo Javier Russo, regard your information significant and release this Privacy Statement to inform you what information I collect and how I use it to personalize and continually improve you experience.\n\nThis Privacy Statement applies to the App "Blind Communicator" and its services and does not apply to the product or service that which does not link to this statement or has its privacy statement respectively.\n\n1 - Collecting information\n\na. Personal Information.\n\nI do not collect Personal Information. "Personal Information" is information that identifies you or another person, such as your first name and last name, physical addresses, email addresses, telephone, fax, camera, microphone, GPS, or any information stored within your device.\n\nb. Non-personal Information.\n\nI do not collect your non-personal information when you are using the App "Blind Communicator" or visiting my Website, including your device information, operation system, logs.\n\nc. Information you provide.\n\nI do not collect your information when you communicate with me.\n\nHow I Use Information\n\na. Personal Information.\n\nI do not store Personal Information and therefore I do not disclose your Personal Information.\n\nb. Non-Personal Information.\n\nI do not sell, trade, or otherwise transfer to outside parties your information. I do not combine Non-Personal Information with Personal Information (such as combining your name with your unique User Device number).\n\nContact Me\n\nIf you have any questions or comments about this Policy or our privacy practices, or to report any violations of the Policy or abuse of the App "Blind Communicator" or the Website, please contact me at contacto@lrusso.com.ar.\n\nChanges\n\nThis Privacy Policy may change which will not reduce your rights under this Privacy Policy from time to time, I will post any privacy policy changes on this page, so please review it periodically. If you do not agree to any modifications to this Policy, your could immediately stop all use of all the Services. Your continued use of the App "Blind Communicator" following the posting of any modifications to this Policy will constitute your acceptance of the revised Policy.</string>

</resources>