<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">

		<ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/background" android:scaleType="fitXY"/>

		<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:background="#F2F2F2">

	    	<TextView  android:id="@+id/textTitle"
	    	    	android:layout_width="300dp"
        			android:layout_height="wrap_content"
        			android:textSize="15sp"
	        		android:textStyle="bold"
        			android:text="@string/app_title"
    	    		android:gravity="center_horizontal"
    	    		android:background="#045FB4"
    	    		android:textColor="#FFFFFF"
        			android:paddingTop="10dp"
        			android:paddingBottom="10dp"/>
		    		    
			<TextView android:id="@+id/textNote"
	        	android:layout_width="300dp"
    	    	android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
        		android:textColor="#000000"
        		android:textSize="15sp"
        		android:text="@string/app_note"
        		android:layout_below="@id/textTitle"/>
    		
    		<Button android:id="@+id/buttonApp"
		        android:layout_width="290dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
				android:layout_marginTop="5dp"
	        	android:textSize="15sp"
		        android:text="@string/app_download"
		        android:layout_below="@id/textNote"/>

    		<Button android:id="@+id/buttonSource"
		        android:layout_width="290dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
	        	android:textSize="15sp"
		        android:text="@string/app_source"
		        android:layout_below="@id/buttonApp"/>

    		<Button android:id="@+id/buttonPrivacy"
		        android:layout_width="290dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginBottom="7dp"
	        	android:textSize="15sp"
		        android:text="@string/app_privacy"
		        android:layout_below="@id/buttonSource"/>
    						
		</RelativeLayout>
		
	</RelativeLayout>
</LinearLayout>